Project structure, compatibility with JDK11