@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>org.jboss.eap.qa</groupId>
+        <groupId>org.jboss.eap.qe</groupId>
         <artifactId>tests-jdkspecifics</artifactId>
         <version>1.0.0.Final-SNAPSHOT</version>
     </parent>
@@ -20,8 +20,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss.home/>
+        <modular.jvm.args/>
         <version.jboss.bom.eap>6.3.0.GA</version.jboss.bom.eap>
-        <version.arquillian-bom>1.1.5.Final</version.arquillian-bom>
+        <version.arquillian-bom>1.4.1.Final</version.arquillian-bom>
         <version.arq-as-container>7.2.0.Final</version.arq-as-container>
         <version.org.jboss.ejb-client>7.2.0.Final</version.org.jboss.ejb-client>
         <version.org.jboss.ejb3-ext-api>2.1.0</version.org.jboss.ejb3-ext-api>
@@ -53,7 +54,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -114,11 +115,11 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>${version.square.okhttp}</version>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-ri</artifactId>
+            <version>2.3.0</version>
+            <type>pom</type>
         </dependency>
-
     </dependencies>
 
     <profiles>
@@ -160,7 +161,7 @@
                 <dependency>
                     <groupId>org.wildfly.arquillian</groupId>
                     <artifactId>wildfly-arquillian-container-managed</artifactId>
-                    <version>1.0.0.Alpha4</version>
+                    <version>2.1.1.Final</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
@@ -179,6 +180,15 @@
                 <node1RemotingPort>8080</node1RemotingPort>
                 <node2RemotingPort>8180</node2RemotingPort>
                 <node2.management.port>10090</node2.management.port>
+            </properties>
+        </profile>
+        <profile>
+            <id>modular-jvm-args</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <modular.jvm.args>--add-modules=java.se</modular.jvm.args>
             </properties>
         </profile>
     </profiles>
@@ -201,7 +211,7 @@
                                 <!-- node1 -->
                                 <delete dir="${project.build.directory}/servers/node1"/>
                                 <copy todir="${project.build.directory}/servers/node1">
-                                    <fileset dir="${jboss.home}">
+                                    <fileset dir="${basedir}/../${tests.jdkspecifics.runtime.dir}">
                                         <include name="standalone/**/*"/>
                                     </fileset>
                                     <cutdirsmapper dirs="1"/>
@@ -210,7 +220,7 @@
                                 <!-- node2 -->
                                 <delete dir="${project.build.directory}/servers/node2"/>
                                 <copy todir="${project.build.directory}/servers/node2">
-                                    <fileset dir="${jboss.home}">
+                                    <fileset dir="${basedir}/../${tests.jdkspecifics.runtime.dir}">
                                         <include name="standalone/**/*"/>
                                     </fileset>
                                     <cutdirsmapper dirs="1"/>
@@ -227,8 +237,9 @@
                 <version>2.16</version>
                 <configuration>
                     <systemProperties>
-                        <jboss.home>${jboss.home}</jboss.home>
+                        <jboss.home>${basedir}/../${tests.jdkspecifics.runtime.dir}</jboss.home>
                         <node2ManagementPort>${node2.management.port}</node2ManagementPort>
+                        <modular.jvm.args>${modular.jvm.args}</modular.jvm.args>
                     </systemProperties>
                 </configuration>
                 <executions>
